--- a/books/9cff23b424aca7/config.yaml
+++ b/books/9cff23b424aca7/config.yaml
@@ -5,7 +5,7 @@ published: true
 price: 0 # 有料の場合200〜5000
 # 本に含めるチャプターを順番に並べましょう
 chapters:
-  - example1
-  - example2
-  - example3
+  - 5fded9
+  - 80cc98
+  - 9f1fcc
 
