append developing chrome extension mv3.

--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "quickly-forget-ts",
+  "name": "zenn-documents",
   "version": "1.0.0",
-  "description": "quickly forget ts grammer",
+  "description": "zenn documents",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/positrium/quickly-forget-ts.git"
+    "url": "git+ssh://git@github.com:positrium/zenn-documents.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/positrium/quickly-forget-ts/issues"
+    "url": "https://github.com/positrium/zenn-documents/issues"
   },
-  "homepage": "https://github.com/positrium/quickly-forget-ts#readme",
+  "homepage": "https://github.com/positrium/zenn-documents#readme",
   "dependencies": {
     "zenn-cli": "^0.1.79"
   }
